fixed servlet mappings for downloading documents and revised names of source code sites in about page.

--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -12,7 +12,14 @@
   <servlet-mapping>
     <servlet-name>springapp</servlet-name>
     <url-pattern>*.go</url-pattern>
- 
+  </servlet-mapping>
+   <servlet-mapping>
+    <servlet-name>springapp</servlet-name>
+    <url-pattern>/MOU</url-pattern>
+  </servlet-mapping>
+     <servlet-mapping>
+    <servlet-name>springapp</servlet-name>
+    <url-pattern>/Acknowledgments</url-pattern>
   </servlet-mapping>
   <servlet>
     <servlet-name>context</servlet-name>
