--- a/build.xml
+++ b/build.xml
@@ -9,6 +9,8 @@
     <property name="project.fullname" value="Primary Life History Database"/>
     <property name="project.version" value="1.0"/>
     <property name="project.name" value="plhdb"/>
+	<property name="plhdb.report_folder" value="/home/plhdb_reports/"/>
+	
 
     <!-- hibernate connection settings -->
     <property name="hibernate.password" value=""/>
@@ -306,6 +308,7 @@
           <filterset>
             <filter token="version" value="${project.version}"/>
             <filter token="deploy_date" value="${plhdb.deploy_time}"/>	
+          	<filter token="report_folder" value="${plhdb.report_folder}"/>	
           </filterset>
         </copy>
     	<!-- copy hibernate configuration file -->
