--- a/src/hibernate.cfg.xml.template
+++ b/src/hibernate.cfg.xml.template
@@ -17,12 +17,12 @@
 		<property name="hibernate.c3p0.min_size">0</property> 
 		<property name="hibernate.c3p0.timeout">30</property> 
 		<property name="hibernate.c3p0.propertyCycle">5</property>
-		
-		<!--
-		<property name="hibernate.transaction.manager_lookup_class">org.hibernate.transaction.JBossTransactionManagerLookup</property>
-		<property name="hibernate.transaction.factory_class">org.hibernate.transaction.JDBCTransactionFactory</property>
-		<property name="hibernate.current_session_context_class">Thread</property>
-		-->
+        <!--		
+	<property name="hibernate.transaction.manager_lookup_class">org.hibernate.transaction.JBossTransactionManagerLookup</property>
+        -->
+        <property name="hibernate.transaction.factory_class">org.hibernate.transaction.JDBCTransactionFactory</property>
+        <property name="hibernate.current_session_context_class">thread</property>
+
         <mapping resource="org/nescent/plhdb/hibernate/dao/Biography.hbm.xml" />
         <mapping resource="org/nescent/plhdb/hibernate/dao/Individual.hbm.xml" />
         <mapping resource="org/nescent/plhdb/hibernate/dao/IndividualRelationship.hbm.xml" />
